# postgres-mcp

./: README.md  pyproject.toml
src/postgres_mcp/: auth.py  server.py
src/postgres_mcp/sql/: safe_sql.py
